--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -23,7 +23,7 @@
             </div>
             <div class="mb-3">
                 <label for="image" class="form-label">Image Link</label>
-                <input name="listing[image]" 
+                <input name="listing[image][url]" 
                     placeholder="Enter image URL/Link" 
                     type="text" 
                     class="form-control" />
