--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,17 +4,22 @@
         <h3><%= listing.title %></h3>
     </div>
     <div class="card col-6 offset-3 show-card listing-card">
-        <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="<%= listing.title %>">
-        <div class="card-body">
-            <p class="card-text">
-                <%= listing.description %> <br>
-                &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
-                <%= listing.location %> <br>
-                <%= listing.country %> <br>
-            </p>
+  <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="<%= listing.title %>">
+  <div class="card-body">
+    <p class="card-text">
+      <b>Owned by <%= listing.owner?.username || 'Unknown' %></b>
+
+           
+                <p class="card-text"> <%= listing.description %> 
+                <p class="card-text"> &#8377; <%= listing.price.toLocaleString("en-IN") %> </p>
+                <p class="card-text"><%= listing.location %></p>
+                <p class="card-text"><%= listing.country %> </p>
+          
         </div>
     </div>
-    <br>
+    <br/>
+
+    <% if (currUser && listing.owner.equals(currUser._id)) { %>
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" 
             class="btn btn-danger col-1 offset-3 edit-btn">Edit</a>
@@ -23,16 +28,27 @@
         </form>
         </form>
     </div>
+
+<% } %>
+
     <div class="col-8 offset-3">
         <hr>
+        <% if(currUser) {%>
         <h4>Leave a Review</h4>
-        <form action="/listings/<%= listing._id %>/reviews" 
+        <form 
+        action="/listings/<%= listing._id %>/reviews" 
             method="POST"
              novalidate 
             class="needs-validation">
             <div class="mb-3">
                 <label for="rating" class="form-label">Rating</label>
-                <input type="range" min="1" max="5" name="review[rating]" class="form-range" id="rating">
+                <input 
+                type="range" 
+                min="1" 
+                max="5" 
+                id="rating"
+                name="review[rating]" 
+                class="form-range">
             </div>
             <div class="mb-3">
                 <label for="comment" class="form-label">Comments</label>
@@ -43,8 +59,10 @@
                 <button class="btn btn-outline-dark">Submit</button>
             </div>
         </form>
-      
         <hr/>
+        <% } %>
+      
+      
 
       <p><b>All Review</b></p>
       <div class="row">
@@ -52,7 +70,7 @@
             <% for(review of listing.reviews) { %>
                 <div class="card col-5 ms-3 mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Jane Doe</h5>
+                        <h5 class="card-title">@<%= review.author.username %></h5>
                         <p class="card-text"><%= review.comment %> </p>
                         <p class="card-text"><%= review.rating %> star</p>
                     </div>
