--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -99,7 +99,7 @@
                                 <h5 class="card-title"><%= listing.title %></h5>
                                 <p class="card-text">
                                    &#8377; <%= listing.price.toLocaleString("en-IN") %> /night
-                                   <i class="tax-info">&nbsp; &nbsp;+18% GST </i>
+                                   <i class="tax-info">&nbsp; &nbsp;Atul </i>
                                 </p>
                             </div>
                         </div>
