--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,19 +1,33 @@
-<footer>
+<!-- <footer class="mt-3" style="position:fixed; bottom: 0;width:100%">
     <div class="f-info">
     <div class="f-info-socials">
         <i class="fa-brands fa-square-facebook"></i>
-        <i class="fa-brands fa-whatsapp"></i>
-        <i class="fa-brands fa-x-twitter"></i>
-        <i class="fa-brands fa-telegram"></i>
         <i class="fa-brands fa-square-instagram"></i>
         <i class="fa-brands fa-linkedin"></i>
 
-    </div>
-    <div class="f-info-brand">Copyright &copy2024 | WonderLust Private Limited</div>
-    <div class="f-info-links">
-          <a href="/privacy">Privacy</a>
-          <a href="/terms">Terms</a>
 
-        </div>    
     </div>
+    <div class="f-info-brand"> &copy;Wonderlust Private Limited</div>
+    <div class="f-info-links">
+     <a href="/privacy">Privacy</a>
+     <a href="/terms">Terms</a>
+
+    </div>
+
+    </div>
+</footer> -->
+<footer style="width:100%">
+    <div class="f-info" style="width:100%">
+        <div class="f-info-socials">
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+        </div>
+        <div class="f-info-brand">&copy; WanderLust Private Limited</div>
+        <div class="f-info-links">
+            <a href="/privacy">Privacy</a>
+            <a href="/terms">Terms</a>
+        </div>
+    </div>
+    
 </footer>
