--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,131 +1,229 @@
-body {
+body{
+   font-family: 'plus jakarta sans',sans-serif !important;
    display: flex;
-   flex-direction: column;
-   min-height: 100vb;
-
+   flex-direction: column !important;
+   min-height: 100vh;
 }
 
-.container {
+.new-container{
    flex: 1;
 }
 
-
-
-/* Navbar */
-.navbar {
-    height: 5rem;
-    background-color: white;
+/* Navebar styling */
+.navbar{
+   height: 5rem;
+ background-color: white;
 }
 
-.fa-compass {
-    color: red;
-    font-size: 2rem;
+.fa-compass{
+   color: #fe424d;
+   font-size:2rem;
+}
+.nav-link{
+   color: #222222 !important;
+}
+
+
+/* Footer */
+
+/* .f-info{
+   text-align: center;
+   height:8rem;
+   
+   background-color: #ebebeb;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: space-evenly;
+  
   
 }
- .nav-link {
-    color: #222222 !important;
- }
+.f-info-links, .f-info-socials,.f-info-brand{
+   width: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 
- /* Footer */
-
- .f-info-links {
-    text-decoration: none;
-    color: #222222;
- }
- 
- .f-info-links a:hover {
-    text-decoration: underline;
- }
-
- .f-info-links,  .f-info-socials, .f-info-brand {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.f-info-socials i {
-    font-size: 1.5rem;
-    margin-right: 1.5rem;
- }
 
- .f-info {
-    text-align: center;
-    height: 8rem;
-    background-color: #ebebeb;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: space-evenly;
- }
+.f-info-socials i{
+   margin-right: 1rem;
+   font-size: 1.2rem;
+
+}
+
+.f-info-links a {
+   text-decoration: none;
+   color:#222222;
+}
 
 
- /* Cards */
- .listing-card {
+.f-info-links a:hover{
+   text-decoration: underline;
+  
+} */
+
+.fa-compass{
+   color: #fe424d;
+   font-size: 2rem;
+}
+.nav-link{
+   color: #222222 !important;
+}
+.f-info-links a{
+text-decoration: none;
+color: #222222;
+}
+.f-info-links a:hover{
+text-decoration: underline;
+}
+.f-info-links, .f-info-socials, .f-info-brand{
+   width: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.f-info-socials i{
+   font-size: 1.2rem;
+   margin-right: 1rem;
+}
+.f-info{
+   text-align: center;
+   height: 8rem;
+   background-color: #ebebeb;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: space-evenly;
+
+}
+
+
+/* cards */
+
+.listing-card{
    border: none !important;
-   margin-bottom: 1rem;
-   margin-left: 2rem;
- }
-
- .card-img-top {
+   margin-bottom: 2rem;
+}
+.card-img-top{
    border-radius: 1rem !important;
    width: 100% !important;
    object-fit: cover !important;
- }
- 
- .card-body {
+}
+.card-body{
    padding: 0 !important;
- }
-
- .listing-link {
+}
+.card-text p{
+   font-weight:400 !important;
+}
+.listing-link{
    text-decoration: none;
- }
-
-.card-text p {
-   font-weight: 400;
 }
 
-/* Card Effect */
-.card-img-overlay {
-   opacity: 0;
-}
+/* card effect */
 
-.card-img-overlay:hover {
-   opacity: 0.5;
+.card-img-overlay{
+   opacity:0;
+}
+.card-img-overlay:hover{
+   opacity:0.2;
    background-color: white;
 }
 
-/* New Page */
-
-.add-btn {
-   background-color: red !important;
+/* update page */
+.add-btn{
+   background-color: #fe424d !important;
    border: none !important;
+
 }
 
-/* Edit page  */
+/* edit page */
+.edit-btn{
+   background-color: #fe424d !important;
+   border: none !important;
 
-
-  
-/* Show Page */
-
-.show-img {
-   height: 20rem;
-   width: 5rem;
 }
 
+/* show page */
+.show-img{
+   height:30vh;
+   background-size: cover;
+}
 
-.btns {
+.btns{
    display: flex;
 }
-
-.show-card {
+.show-card{
    padding-left: 0;
    padding-right: 0;
 }
+/* delete popover */
+/* .delete-btn {
+   margin-left: 10px;
+   color: red ;
+   cursor: pointer;
+} */
 
-
-/* Map */
-#map { 
-   height: 400px;
-   width: 80vh;
+.popover {
+   display: none;
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   padding: 20px;
+   background: white;
+   border: 1px solid #ccc;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.svg-icon{
+   position:relative;
+   left:130px;
+   bottom:4px;
+}  
+
+/* map */
+/* #map {
+    height:400px;
+    width: 80vh;
+    } */
+
+      @media screen and (min-width: 540px) {
+       #map {
+           margin-left: 2% !important;
+           width: 300px;
+           height: 300px;
+       }
+   } 
+    @media screen and (min-width:768px) {
+
+       #map {
+           height:400px;
+           width: 80vh;
+           }
+
+    }
+    /* @media screen and (min-width: 540px) {
+       #map {
+           margin-left: 2% !important;
+           width: 300px;
+           height: 300px;
+       }
+   }  */
+
+    /* @media screen and (min-width: 450px) {
+       #map {
+           margin-left: 2% !important;
+           width: 200px;
+           height: 250px;
+       }
+   }
+   
+   @media screen and (max-width: 1024px) {
+       #map {
+        
+           width: 80vh;
+           height: 400px;
+       }
+   }  
