--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,9 +1,143 @@
-<% layout("/layouts/boilerplate") %>
+<%#  <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wonderlust</title>
+     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+     rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<div class="row mt-3">
-    <div class="alert alert-danger col-6 offset-3" role="alert">
-        
-        <h4 class="alert"><%= err.message %></h4>
-        <p><%= err.tarce %></p>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" 
+      rel="stylesheet">%>
+      <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+        <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+          </symbol>
+    </svg>
+
+
+
+
+
+<%#
+<style>
+    .f-info{
+    text-align: center;
+    height:8rem;
+  
+    background-color: #ebebeb;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: space-evenly;
+   
+}
+.nav-link{
+    color: #222222 !important;
+}
+.fa-compass{
+    color: #fe424d;
+    font-size:2rem;
+}
+.navbar{
+    height: 5rem;
+  background-color: white;
+}
+.f-info-links, .f-info-socials,.f-info-brand{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.f-info-socials i{
+    font-size: 1.2rem;
+    margin-right: 1rem;
+}
+
+
+ .svg-icon{
+    position:relative;
+    left:130px;
+    bottom:4px;
+}  
+.error{ 
+   
+     margin-left: 10rem; 
+    margin-right: 10rem;
+}
+
+
+
+
+  
+    
+   
+ 
+
+
+</style>
+
+      
+</head>
+<body> 
+
+    <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/"><i class="fa-solid fa-compass"></i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link"  href="/">Home</a>
+                    <a class="nav-link" href="/listings">All Listings</a>
+                    <a class="nav-link" href="/listings/new">Add New Listings</a>
+                </div>
+    
+                
+            </div>
+        </div>
+    </nav>%>
+
+ 
+    <% layout("/layouts/boilerplate.ejs") %>
+
+
+<div class="row error mt-4">
+<div class="alert alert-danger d-flex error-msg " role="alert">
+
+        <svg class="bi flex-shrink-0 svg-icon " role="img" aria-label="Danger:" height="30px"><use xlink:href="#exclamation-triangle-fill"> </svg>
+    <h4> <%=message%></h4>
+    
     </div>
 </div>
+
+<%#
+
+    <footer  style="position:fixed; bottom:0; width:100%;" >
+        <div class="f-info">
+            <div class="f-info-socials">
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+            </div>
+            <div class="f-info-brand">&copy; WanderLust Private Limited</div>
+            <div class="f-info-links">
+                <a href="/privacy">Privacy</a>
+                <a href="/terms">Terms</a>
+            </div>
+        </div>
+        
+    </footer>
+</body>
+</html>
+%>
