--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,128 +1,175 @@
-<% layout("layouts/boilerplate") %>
-
+<% layout("/layouts/boilerplate.ejs") %>
 
 <style>
-    #filter {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-    }
+  #filters{
+   display: flex;
+   flex-wrap: wrap;
+  align-items: center;
+   margin-right: 2rem;
+  }
+ .filter{  
 
-    .filter {
-        text-align: center;
-        margin-right: 2rem;
-        margin-top: 2rem;
-        opacity: 0.6;
-    }
-    .filter:hover {
-        opacity: 1;
-        cursor: pointer;
-    }
+  text-align: center;
+  margin-right: 2rem;
+  margin-top: 2rem;
+  opacity:0.6;
+ }
+ .filter:hover{
+  opacity:1;
+  cursor: pointer;
+ }
 
-    .filter p {
-        font-style: italic;
-        font-size: 1rem;
-    }
-     .tax-info {
-        display: none;
-     }
-     .tax-toggle {
-        border: 1px solid black;
-        border-radius: 1rem;
-        height: 3.5rem;
-        padding: 1rem;
-        margin-left: 6rem;
-        display: flex;
-        align-items: center;
-     }
+ .filter p{
+  font-size:0.8rem;
+ }
+ .tax-info{
+  display:none;
+ }
+ .tax-toggle{
+  border:1px solid black;
+  border-radius: 1rem;
+  height: 3.5rem;
+  padding: 1rem;
+  margin-top: 1rem;
+  margin-left: 8rem;
+
+  display: flex;
+  align-items: center;
+
+
+ }
+
 </style>
 
-<div class="container mt-4">
-    <!-- <h3 class="mb-4">All Listings</h3> -->
 
-    <!-- Uncomment the form to enable "Create New Listing" button -->
-    <!-- <form method="GET" action="/listings/new" class="mb-4">
-        <button type="submit" class="btn btn-primary">Create New Listing</button>
-    </form> -->
-<div id="filter">
-    <div class="filter">
-        <div><i class="fa-solid fa-people-group"></i></div>
-        <p>PPU Hubs </p>
-       </div>
+
+     <div id="filters" >
+      <div class="filter ">
+        <div>
+          <i class="fa-solid fa-fire"></i>  </div>
+          <p>Trending</p>
+      
+        </div>
+        <div class="filter">
+        <div>
+          <i class="fa-solid fa-bed"></i>   </div>
+          <p>Rooms</p>
+     
+      </div>
+      <div class="filter">
+        <div>
+          <i class="fa-solid fa-mountain"></i>   </div>
+          <p>Mountains</p>
+    
+      </div>
+      <div class="filter">
+        <div>
+          <i class="fa-solid fa-mountain-city"></i>  </div>
+          <p>Iconic cities</p>
+      
+      </div>
+       <!-- <div class="filter">
+        <div>
+          <i class="fa-brands fa-fort-awesome"></i>  </div>
+          <p>Castle</p>
+    
+      </div>  -->
+      <div class="filter">
+        <div>
+          <i class="fa-solid fa-person-swimming"></i>  </div>
+          <p>Amazing pools</p>
+      
+      </div>
+       <!-- <div class="filter">
+        <div>
+          <i class="fa-solid fa-campground"></i>  </div>
+          <p>Camping</p>
+        
+      </div>  -->
+      <div class="filter">
+        <div>
+          <i class="fa-solid fa-cow"></i>  </div>
+          <p>Farms</p>
+     
+      </div>
+       <!-- <div class="filter">
+        <div>
+          <i class="fa-regular fa-snowflake"></i>  </div>
+          <p>Arctic</p>
+     
+      </div>  -->
+      <div class="filter">
+        <div>
+          <i class="fa-solid fa-umbrella-beach"></i>  </div>
+          <p>Beachfront</p>
+        
+      </div>
+      <div class="filter">
+        <div>
+          <i class="fa-solid fa-landmark-dome"></i>  </div>
+          <p>Historical homes</p>
+    
+      </div> 
        <div class="filter">
-        <div><i class="fa-solid fa-book-open"></i></i></div>
-        <p>PPU Syllabus </p>
-    </div>
-    <div class="filter">
-        <div><i class="fa-regular fa-newspaper"></i></div>
-        <p>PPU NewsPaper Cutting </p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-building-circle-arrow-right"></i></div>
-        <p>PPU Study center </p>
-    </div>
-    <div class="filter">
-        <div><i class="fa-regular fa-note-sticky"></i></div>
-        <p>PPU Notice </p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-rectangle-list"></i></div>
-        <p>PPU College List </p>
-    </div>
-   <div class="tax-toggle">
-    <div class="form-check-reverse form-switch">
-        <input 
-        class="form-check-input" 
-        type="checkbox" role="switch" 
-        id="flexSwitchCheckDefault"
-        />
-        <label class="form-check-label" 
-        for="flexSwitchCheckDefault">
-        Default switch checkbox input</label>
+        <div>
+          <i class="fa-solid fa-tree-city"></i>  </div>
+          <p>Tree House</p>
+      
+      </div> 
+   
+    <div class="tax-toggle " >
+      <div class="form-check-reverse form-switch ">
+        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+        <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
       </div>
    </div>
-</div>
-    <div class="row">
-        <% if (allListings && allListings.length > 0) { %>
-            <% for (let listing of allListings) { %>
-                <div class="col-md-4 col-sm-6 mb-4">
-                    <a href="/listings/<%= listing._id %>" class="text-decoration-none text-dark">
-                        <div class="card h-100">
-                            <img 
-                            src="<%= listing.image.url %>" 
-                            class="card-img-top" 
-                            alt="<%= listing.title %> image" 
-                            style="height: 20rem;" 
-                            />
-                            <div class="card-img-overlay"></div>
-                            <div class="card-body">
-                                <h5 class="card-title"><%= listing.title %></h5>
-                                <p class="card-text">
-                                   &#8377; <%= listing.price.toLocaleString("en-IN") %> /night
-                                   <i class="tax-info">&nbsp; &nbsp;Atul </i>
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            <% } %>
-        <% } else { %>
-            <div class="col-12 text-center">
-                <p>No listings available at the moment. Please check back later.</p>
-            </div>
-        <% } %>
-    </div>
-</div>
+    </div> 
+   
 
-<script>
-    let taxSwitch = document.getElementById("flexSwitchCheckDefault");
-    taxSwitch.addEventListener("click",() => {
-       let taxInfo = document.getElementsByClassName("tax-info");
-       for(info of taxInfo) {
-        if (info.style.display != "inline") {
-            info.style.display = "inline";
-        } else
-       info.style.display = "none";
-       }
-    });
-</script>
+  
+  
+    
+ 
+
+   
+  
+    <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-3 mt-3">
+      <%for(let listing of allListing){%>
+        <a href="/listings/<%= listing._id %>" class="listing-link">
+        <div class="card col listing-card">
+          <img src="<%= listing.image.url %>" class="card-img-top" alt="listing-image"  style="height: 20rem;">
+
+          <div class="card-img-overlay"></div>
+
+          <div class="card-body">
+            <p class="card-text">
+             <b> <%=listing.title%></b> <br>
+              &#8377; <%=listing.price.toLocaleString("en-In")%>/night
+              <i class="tax-info">&nbsp; &nbsp; +18% GST</i>
+            </p>
+          </div>
+        </div>
+      </a>
+        <% } %>
+
+
+
+    </div>
+    
+<!-- <script>
+  let taxSwitch=document.getElementById("flexSwitchCheckDefault")
+  taxSwitch.addEventListener("click",()=>{
+    // console.log("clicked");
+    let taxInfo = document.getElementsByClassName("tax-info");
+    console.log(taxInfo);
+    for(info of taxInfo){
+      if(info.style.display !="inline"){
+        info.style.display="inline";
+      }else
+      info.style.display="none";
+    }
+  })
+</script> -->
+    
+<script src="/js/toggleButton.js"></script>
+<script src="/js/categoryListing.js"></script>
