--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -19,7 +19,7 @@
 
    <div class="mb-3">
     <label for="image" class="form-label"> Upload new Image</label>
-    <input value="<%=listing.image%>" name="listing[image]" type="file" class="form-control" required>
+    <input value="<%=listing.image%>" name="listing[image]" type="file" class="form-control">
    </div>
 
    <div class="mb-3">
