--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -62,12 +62,12 @@
         <label for="category" class="form-label">Category</label>
         <select name="listing[category]" id="category" multiple class="form-select" required aria-label="Multiple select example">
      
-            <option value="Trending">PPU Hubs </option>
-            <option value="Rooms">PPU Syllabus</option>
-            <option value="Boats">BPPU NewsPaper Cutting</option>
-            <option value="Domes">PPU Study center</option>
-            <option value="Iconic cities">PPU Notice</option>
-            <option value="Mountains">PPU College List </option>
+            <option value="Trending"> Trending</option>
+            <option value="Rooms">Rooms</option>
+            <option value="Boats">Boats</option>
+            <option value="Domes">Dooms</option>
+            <option value="Iconic cities">Iconic Cities</option>
+            <option value="Mountains">Mountains </option>
            
         </select>
     </div>
