--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -47,30 +47,31 @@
         
     
 <div id="filter">
-    <div class="filter">
+    <a href="/listings/category/trending" class="filter">
         <div><i class="fa-solid fa-people-group"></i></div>
-        <p>PPU Hubs </p>
-       </div>
-       <div class="filter">
-        <div><i class="fa-solid fa-book-open"></i></i></div>
-        <p>PPU Syllabus </p>
-    </div>
-    <div class="filter">
+        <p>Trending</p>
+    </a>
+    <a href="/listings/category/rooms" class="filter">
+        <div><i class="fa-solid fa-book-open"></i></div>
+        <p>Rooms</p>
+    </a>
+    <a href="/listings/category/boats" class="filter">
         <div><i class="fa-regular fa-newspaper"></i></div>
-        <p>PPU NewsPaper Cutting </p>
-       </div>
-       <div class="filter">
+        <p>Boats</p>
+    </a>
+    <a href="/listings/category/dooms" class="filter">
         <div><i class="fa-solid fa-building-circle-arrow-right"></i></div>
-        <p>PPU Study center </p>
-       </div>
-    <div class="filter">
+        <p>Dooms</p>
+    </a>
+    <a href="/listings/category/iconic cities" class="filter">
         <div><i class="fa-regular fa-note-sticky"></i></div>
-        <p>PPU Notice </p>
-       </div>
-       <div class="filter">
+        <p>Iconic Cities</p>
+    </a>
+    <a href="/listings/category/mountains" class="filter">
         <div><i class="fa-solid fa-rectangle-list"></i></div>
-        <p>PPU College List </p>
-    </div>
+        <p>Mountains</p>
+    </a>
+    
    <div class="tax-toggle">
     <div class="form-check-reverse form-switch">
         <input 
